DRC/include/ll/Core.h

LLEXPORT ЛЛЗначение LLBuildAtomicRMW(ЛЛПостроитель B, LLVMAtomicRMWBinOp op,
                               ЛЛЗначение PTR, ЛЛЗначение Val,
                               LLVMAtomicOrdering ordering,
                               LLVMBool singleThread);
LLEXPORT ЛЛЗначение LLBuildAtomicCmpXchg(ЛЛПостроитель B, ЛЛЗначение Ptr,
                                    ЛЛЗначение Cmp, ЛЛЗначение New,
                                    LLVMAtomicOrdering SuccessOrdering,
                                    LLVMAtomicOrdering FailureOrdering,
                                    LLVMBool singleThread) ;
LLEXPORT LLVMAtomicOrdering LLGetCmpXchgSuccessOrdering(ЛЛЗначение CmpXchgInst);
LLEXPORT void LLSetCmpXchgSuccessOrdering(ЛЛЗначение CmpXchgInst,
                                   LLVMAtomicOrdering Ordering);
LLEXPORT LLVMAtomicOrdering LLGetCmpXchgFailureOrdering(ЛЛЗначение CmpXchgInst);
LLEXPORT void LLSetCmpXchgFailureOrdering(ЛЛЗначение CmpXchgInst,
                                   LLVMAtomicOrdering Ordering);