DRC/src/ll/Core.d


ЛЛЗначение ЛЛСтройПусто(ЛЛПостроитель постр, ЛЛЗначение знач,
                             ткст0 имя);
ЛЛЗначение ЛЛСтройНеПусто(ЛЛПостроитель постр, ЛЛЗначение знач,
                                ткст0 имя);
ЛЛЗначение ЛСтройУкзДифф(ЛЛПостроитель постр, ЛЛЗначение LHS,
                              ЛЛЗначение RHS, ткст0 имя);
ЛЛЗначение ЛЛСтройЗабор(ЛЛПостроитель постр, ЛЛАтомныйПорядок порядок,
                            ЛЛБул однопоточен_ли, ткст0 имя);
ЛЛЗначение LLBuildAtomicRMW(ЛЛПостроитель постр, LLVMAtomicRMWBinOp op,
                                ЛЛЗначение PTR, ЛЛЗначение знач,
                                ЛЛАтомныйПорядок порядок,
                                ЛЛБул однопоточен_ли);
ЛЛЗначение LLBuildAtomicCmpXchg(ЛЛПостроитель постр, ЛЛЗначение укз,
                                    ЛЛЗначение Cmp, ЛЛЗначение нов,
                                    ЛЛАтомныйПорядок порядокУспех,
                                    ЛЛАтомныйПорядок порядокСбой,
                                    ЛЛБул однопоточен_ли);

ЛЛБул ЛЛАтомнОднонить_ли(ЛЛЗначение атомнИнстр);
проц ЛЛУстАтомнОднонить(ЛЛЗначение атомнИнстр, ЛЛБул однопоточен_ли);

ЛЛАтомныйПорядок LLGetCmpXchgSuccessOrdering(ЛЛЗначение CmpXchgInst);
проц LLSetCmpXchgSuccessOrdering(ЛЛЗначение CmpXchgInst,
                                   ЛЛАтомныйПорядок порядок);
ЛЛАтомныйПорядок LLGetCmpXchgFailureOrdering(ЛЛЗначение CmpXchgInst);
проц LLSetCmpXchgFailureOrdering(ЛЛЗначение CmpXchgInst,
                                   ЛЛАтомныйПорядок порядок);

/**
 * @}
 */

/**
 * @defgroup LLCCoreModuleProvider Модуль Провайдеры
 *
 * @{
 */

/**
 * Changes the type of м so it can be passed to FunctionPassManagers and the
 * JIT.  They take ModuleProviders for historical reasons.
 */
ЛЛМодульПровайдер
ЛЛСоздайМодульПровайдерДляСущМодуля(ЛЛМодуль м);

/**
 * Удалить модуль м.
 */
проц ЛЛвыместиМодульПровайдер(ЛЛМодульПровайдер м);

/**
 * @}
 */

/**
 * @defgroup LLCCoreMemoryBuffers Буферы Памяти
 *
 * @{
 */

ЛЛБул ЛЛСоздайБуфПамССодержимымФайла(ткст0 путь, ЛЛБуферПамяти *выхБуфПам, ткст0 *выхСооб);
ЛЛБул ЛЛСоздайБуфПамСоСТДВХО(ЛЛБуферПамяти *выхБуфПам, ткст0 *выхСооб);
ЛЛБуферПамяти ЛЛСоздайБуфПамСДиапазономПам(ткст0 вхоДан, т_мера длинаВхоДан,
                                                          ткст0 имяБуф,
                                                          ЛЛБул нуженНулТерминатор_ли);
ЛЛБуферПамяти ЛЛСоздайБуфПамСКопиейДиапазонаПам(ткст0 вхоДан,
                                                              т_мера длинаВхоДан,
                                                              ткст0 имяБуф);
ткст0 ЛЛДайНачалоБуфера(ЛЛБуферПамяти буфПам);
т_мера ЛЛДайРазмерБуфера(ЛЛБуферПамяти буфПам);
проц ЛЛВыместиБуферПамяти(ЛЛБуферПамяти буфПам);

/**
 * @}
 */

/**
 * @defgroup LLCCorePassRegistry Реестр Проходок
 *
 * @{
 */

/** Возвращает глобальный реестр проходок для использования с
 функциями инициализации.
    @see llvm::PassRegistry::getPassRegistry */
ЛЛРеестрПроходок ЛЛДайГлобРеестрПроходок();

/**
 * @}
 */

/**
 * @defgroup LLCCorePassManagers Менеджеры Проходок
 *
 * @{
 */

/** Constructs a new whole-module pass pipeline. This type of pipeline is
    suitable for link-time optimization and whole-module transformations.
    @see llvm::PassManager::PassManager */
ЛЛМенеджерПроходок ЛЛСоздайМенеджерПроходок();

/** Constructs a new function-by-function pass pipeline over the module
    provider. It does not take ownership of the module provider. This type of
    pipeline is suitable for code generation and JIT compilation tasks.
    @see llvm::FunctionPassManager::FunctionPassManager */
ЛЛМенеджерПроходок ЛЛСоздайМенеджерФукнцПроходокДляМодуля(ЛЛМодуль м);

/** Депрекировано: Use LLCreateFunctionPassManagerForModule instead. */
ЛЛМенеджерПроходок ЛЛСоздайМенеджерФукнцПроходок(ЛЛМодульПровайдер MP);

/** Инициализует все проходки,запланированные в менеджере проходок.
    Возвращает 1, если любая из проходок изменяет модуль, или иначе 0.
    @see llvm::PassManager::run(Module&) */
ЛЛБул ЛЛЗапустиМенеджерПроходок(ЛЛМенеджерПроходок пм, ЛЛМодуль м);

/** Инициализует все проходки по функциям,запланированные в менеджере проходок по
    функциям. Возвращает 1, если любая из проходок изменяет модуль, или иначе 0.
    @see llvm::FunctionPassManager::doInitialization */
ЛЛБул ЛЛИнициализуйМенеджерФукнцПроходок(ЛЛМенеджерПроходок FPM);

/** Выполняет все проходки по функциям,запланированные в менеджере проходок по
    функциям. Возвращает 1, если любая из проходок изменяет модуль, или иначе 0.
    @see llvm::FunctionPassManager::run(Function&) */
ЛЛБул ЛЛЗапустиМенеджерФукнцПроходок(ЛЛМенеджерПроходок FPM, ЛЛЗначение ф);

/** Финилизует все проходки по функциям, запланированные в менеджере проходок по
    функциям. Возвращает 1, если любая из проходок изменяет модуль, или иначе 0.
    @see llvm::FunctionPassManager::doFinalization */
ЛЛБул ЛЛФинализуйМенеджерФукнцПроходок(ЛЛМенеджерПроходок FPM);

/** Освобождает память пайплайна проходок. Для пайплайна функций не высвобождает
    провайдер модулей.
    @see llvm::PassManagerBase::~PassManagerBase. */
проц ЛЛВыместиМенеджерПроходок(ЛЛМенеджерПроходок пм);

/**
 * @}
 */

/**
 * @defgroup LLCCoreThreading Управление потоками
 *
 * Содержит структуры, необходимые для безопасности LLVM при многопоточности.
 *
 * @{
 */

/** Депрекировано: Многопоточность может быть включена/выключена только при определении
    во время компиляции LLVM_ENABLE_THREADS.  Эта функция всегда возвращает
    LLVMIsMultithreaded(). */
ЛЛБул ЛЛСтартМультинить();

/** Депрекировано: Многопоточность может быть включена/выключена только при определении
    во время компиляции LLVM_ENABLE_THREADS. */
проц ЛЛСтопМультинить();

/** Проверить, выполняется ли LLVM в потокобезопасном режиме.
    @see llvm::llvm_is_multithreaded */
ЛЛБул ЛЛМультинить_ли();

}

